--- a/delivery/templates/delivery/header-index.html
+++ b/delivery/templates/delivery/header-index.html
@@ -31,7 +31,7 @@
     <nav class="nav">
         <ul class="nav__menu">
             {% if user.is_authenticated %}
-            {% if request.user|has_group:'news_moderators' or request.user|has_group:'news_admins' %}
+            {% if request.user|has_group:'news_moderators' or request.user|has_group:'news_admins' or user.is_superuser%}
             <li class="nav__item"><a href="{% url 'control' %}" class="nav__link">control</a></li>
             {% endif %}
             {% endif %}
